# multipython-plugins

./: CHANGELOG.md  Justfile  Makefile  README.md  compose.yml  docsubfile.py  pyproject.toml
NEWS.d/: 1.added.md  1.changed.1.md  1.changed.md  1.released.1.md  1.released.md  3.added.1.md  3.added.2.md  3.added.md  6.released.md  7.released.md
docs/part/: plugin-noinstall.md
plugins/tox-multipython/: README.md  pyproject.toml
plugins/tox-multipython/docs/part/: badges.md  main.md
plugins/tox-multipython/src/tox_multipython/: hookimpl.py  hooks.py
plugins/virtualenv-multipython/: README.md  pyproject.toml
plugins/virtualenv-multipython/docs/part/: badges.md  main.md
plugins/virtualenv-multipython/src/virtualenv_multipython/: tag.py
tests/: cases.toml  shared.sh  test.sh  test_tox3.sh  test_tox4.sh  test_venv.sh  tox.noexec.ini  tox.noinstall.ini  tox.notfound.ini  tox.passing.ini  tox3.noinstall.ini  tox3.notfound.ini  tox3.passing.ini  tox4.ini
tests/samplepkg/: pyproject.toml
