[project]
name = "multipython-plugins"
version = "0.0.0"
description = "Workspace of internal plugins for multipython project"
readme = "README.md"
requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4"
dependencies = []

[dependency-groups]
dev = [
  "bump-my-version @ git+https://github.com/makukha/bump-my-version@date62; python_version>='3.13'",
  "caseutil>=0.7; python_version>='3.13'",
  "mypy>=1.14; python_version>='3.13'",
  "ruff>=0.9; python_version>='3.13'",
  "towncrier>=24.8; python_version>='3.13'",
  # docs
  "bracex>=2.5; python_version>='3.13'",
  "docsub>=0.8; python_version>='3.13'",
  # optional dependencies for worksace members
  "loguru>=0.7; python_version>='3.5'",
]


# bump-my-version

[tool.bumpversion]
current_version = "251R"
allow_dirty = true

parse = """(?x)
    (?P<release>
        (?:[0-9]{2})
        (?:[1-9ABC])
        (?:[1-9A-V])
    )
    (?:\\.(?P<patch>[1-9][0-9]*))?
"""
parts = { release = { calver_format = "{YY}{M16}{D62}" } }
serialize = ["{release}.{patch}", "{release}"]

# mypy

[tool.mypy]
strict = true

# ruff

[tool.ruff]
target-version = "py37"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S"]
[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# towncrier

[tool.towncrier]
directory = "NEWS.d"
filename = "CHANGELOG.md"
title_format = "## [v{version}](https://github.com/makukha/multipython-plugins/releases/tag/v{version}) — {project_date}"
issue_format = "[#{issue}](https://github.com/makukha/multipython-plugins/issues/{issue})"
type = [
  {name = "Security ⚠️", directory = "security", showcontent = true},
  {name = "Breaking 🔥", directory = "breaking", showcontent = true},
  {name = "Removed 💨", directory = "removed", showcontent = true},
  {name = "Deprecated ❄️", directory = "deprecated", showcontent = true},
  {name = "Added 🌿", directory = "added", showcontent = true},
  {name = "Changed", directory = "changed", showcontent = true},
  {name = "Fixed", directory = "fixed", showcontent = true},
  {name = "Docs", directory = "docs", showcontent = true},
  {name = "Released", directory = "released", showcontent = true},
  {name = "Misc", directory = "misc", showcontent = true},
]

# uv

[tool.uv.sources]
tox-multipython = { workspace = true }
virtualenv-multipython = { workspace = true }
[tool.uv.workspace]
members = ["plugins/*"]
